--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,10 @@ body {
     background-color: #1c1c20;
 }
 
+.custom-nav a {
+    text-decoration: none;
+}
+
 .custom-header {
     display: flex;
     justify-content: space-between;
