--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,14 @@
             <nav class="navbar navbar-light custom-nav">
                 <div class="container-fluid justify-content-center">
                   <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
-                  <a href="/dashboard"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
+                  <a href="/login"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
                   <a href='/login'><span class="navbar-brand mb-0 h1 text-white custom-nav">Login</span></a>
                 </div>
               </nav>
           </div>
-          <div class="card custom-card">
+  
               {{{body}}}
-          </div>
+   
 
     
     
