--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,9 @@
-            <div class="card-headers custom-header">
-                <div class="title"><strong>Example Title</strong></div> 
-                <div class="posted">Posted by: </div>
-            </div>
-            <div class="card-body custom-body">
-                <div class="info">Blog written information</div>
-            </div>
+<div class="card custom-card">
+<div class="card-headers custom-header">
+    <div class="title"><strong>Example Title</strong></div>
+    <div class="posted">Posted by: </div>
+</div>
+<div class="card-body custom-body">
+    <div class="info">Blog written information</div>
+</div>
+</div>
