routing from home page to login, then register created; if user selects dashboard they are routed to log in, from log in they can select register to then be directed to a form to register

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,7 @@ body {
 }
 .card-container {
     margin-top: 4rem;
+    justify-content: center;
 }
 
 .cust-card-header {
@@ -113,3 +114,11 @@ body {
     font-size: 1.5rem;
 }
 
+.register {
+    color: white;
+    justify-content: end;
+
+}
+a {
+    text-decoration: none;
+}
