--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,11 +1,16 @@
- <div class="container card-container">
-        <div class="row justify-content-center">
+      <div class="container card-container">
+                <div class="row justify-content-center">
             <div class="col-6">
                 <div class="all-card">
-                    <h5 class="cust-card-header text-center">Already have an account? Sign In!</h5>
+                    <h5 class="cust-card-header text-center">New member?  Register here!</h5>
                     <div class="card-body custom-body">
                         <form>
 
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label custom-form-usrn"><strong>Username</strong></label>
+                                <input type="email" class="form-control custom-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp">
+                            </div>
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
                                         address</strong></label>
@@ -20,9 +25,6 @@
                             </div>
 
                             <button type="submit" class="btn custom-btn">Log In</button>
-                
-                                <a href='/register'><span class="register">New to the site?  Click here to register</span></a>
-            
 
                         </form>
 
