--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
                 <div class="all-card">
                     <h5 class="cust-card-header text-center">Already have an account? Sign In!</h5>
                     <div class="card-body custom-body">
-                        <form>
+                        <form class="login-form">
 
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
@@ -29,3 +29,5 @@
                     </div>
                 </div>
             </div>
+
+            <script src="/public/js/login.js"></script>
