--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -8,7 +8,7 @@
 
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-usrn"><strong>Username</strong></label>
-                                <input type="email" class="form-control custom-control" id="exampleInputEmail1"
+                                <input type="username" class="form-control custom-control" id="exampleInputEmail1"
                                     aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
@@ -31,3 +31,4 @@
                     </div>
                 </div>
             </div>
+     <script src="/public/js/login.js"></script>
