able to post new username/email/pw through postman

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -8,20 +8,20 @@
 
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-usrn"><strong>Username</strong></label>
-                                <input type="username" class="form-control custom-control" id="exampleInputEmail1"
+                                <input type="username" class="form-control custom-control" id="username"
                                     aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
                                         address</strong></label>
-                                <input type="email" class="form-control custom-control" id="exampleInputEmail1"
+                                <input type="email" class="form-control custom-control" id="email-signup"
                                     aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label custom-pw"><strong>Password</strong></label>
-                                <input type="password" class="form-control custom-form" id="exampleInputPassword1">
+                                <input type="password" class="form-control custom-form" id="pw-signup">
                             </div>
 
                             <button type="submit" class="btn custom-btn">Log In</button>
@@ -31,4 +31,4 @@
                     </div>
                 </div>
             </div>
-     <script src="/public/js/login.js"></script>
+     <script src="/public/js/regsiter.js"></script>
