--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,34 +1,36 @@
-      <div class="container card-container">
-                <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="all-card">
-                    <h5 class="cust-card-header text-center">New member?  Register here!</h5>
-                    <div class="card-body custom-body">
-                        <form>
+<div class="container card-container">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="all-card">
+                <h5 class="cust-card-header text-center">New member? Register here!</h5>
+                <div class="card-body custom-body">
+                    <form class="form signup-form">
 
-                            <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label custom-form-usrn"><strong>Username</strong></label>
-                                <input type="username" class="form-control custom-control" id="username"
-                                    aria-describedby="emailHelp">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1"
+                                class="form-label custom-form-usrn"><strong>Username</strong></label>
+                            <input type="username" class="form-control custom-control" id="user_name"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
+                                    address</strong></label>
+                            <input type="email" class="form-control custom-control" id="email-signup"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
                             </div>
-                            <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
-                                        address</strong></label>
-                                <input type="email" class="form-control custom-control" id="email-signup"
-                                    aria-describedby="emailHelp">
-                                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label custom-pw"><strong>Password</strong></label>
-                                <input type="password" class="form-control custom-form" id="pw-signup">
-                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1"
+                                class="form-label custom-pw"><strong>Password</strong></label>
+                            <input type="password" class="form-control custom-form" id="pw-signup">
+                        </div>
 
-                            <button type="submit" class="btn custom-btn">Log In</button>
+                        <button type="submit" class="btn custom-btn">Log In</button>
 
-                        </form>
+                    </form>
 
-                    </div>
                 </div>
             </div>
-     <script src="/public/js/regsiter.js"></script>
+        </div>
+        <script src="./js/regsiter.js"></script>
