--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,14 +9,14 @@
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label custom-form-email"><strong>Email
                                         address</strong></label>
-                                <input type="email" class="form-control custom-control" id="exampleInputEmail1"
+                                <input type="email" class="form-control custom-control" id="login-email"
                                     aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label custom-pw"><strong>Password</strong></label>
-                                <input type="password" class="form-control custom-form" id="exampleInputPassword1">
+                                <input type="password" class="form-control custom-form" id="login-password">
                             </div>
 
                             <button type="submit" class="btn custom-btn">Log In</button>
