--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-light custom-nav">
                 <div class="container-fluid justify-content-center">
                   <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
-                  <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
+                  <a href="/dash"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
                   {{#if loggedIn}}
                   <button id="logout" class="btn-no-style">Logout</button>
                   {{else}}
