--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,13 @@
 {{#each entries as |entry|}}
 
-<div class="card custom-card">
-<div class="card-headers custom-header">
-    <div class="title"><strong>{{entry.title}}</strong></div>
-    <div class="posted">Posted by: {{user.user_name}}</div>
-</div>
-<div class="card-body custom-body">
-    <div class="info">{{entry.text}}</div>
-</div>
-</div>
+    <div class="card custom-card">
+       <a href="/entry"><div class="card-headers custom-header">
+            <div class="title"><strong>{{entry.title}}</strong></div>
+            <div class="posted">Posted by: {{user.user_name}}</div>
+        </div>
+        <div class="card-body custom-body">
+            <div class="info">{{entry.text}}</div>
+        </div>
+        </div></a> 
 
 {{/each}}
