login working, login button changed to logout once logged in

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,13 +4,16 @@
     margin-left: 5rem;
     margin-right: 5rem;
 }
-html {
+/* html {
     height: 100%
-}
+} */
 body {
-    height: 100%;
+    height: auto;
     background-image: linear-gradient(rgb(32, 31, 31), rgb(153, 136, 230));
     background-repeat: no-repeat;
+    padding-bottom: 8rem;
+    background-size: 100% 100%;
+    /* min-height: 100%; */
 }
 
 .header-text {
@@ -55,6 +58,8 @@ body {
 
 .info {
     margin-left: 0.5rem;
+    text-decoration: none;
+    color: black;
 }
 
 /* login page css */
@@ -141,4 +146,8 @@ a {
     color: white;
     background: #1c1c20;
     width: 100%;
+}
+
+#logout {
+    border: none;
 }
