--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+  <html>
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
@@ -15,7 +16,7 @@
                   <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
                   <a href="/dash"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
                   {{#if loggedIn}}
-                  <button id="logout" class="btn-no-style">Logout</button>
+                  <button id="logout" class="navbar-brand mb-0 h1 text-white custom-nav">Logout</button>
                   {{else}}
                   <a href='/login'><span class="navbar-brand mb-0 h1 text-white custom-nav">Login</span></a>
                   {{/if}}
