--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <div class="card custom-card" id={{entry.id}}>
        <div class="card-headers custom-header">
             <div class="title"><strong>{{entry.title}}</strong></div>
-            <div class="posted">Posted by: {{user.user_name}}</div>
+            <div class="posted">Posted by: {{user.user_name}} on {{format_date entry.date_created}}</div>
         </div>
         <div class="card-body custom-body">
             <div class="info">{{entry.text}}</div>
