when dashboard clicked routed to user dashboard displaying their current blogs and an input to create a new one

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
             <nav class="navbar navbar-light custom-nav">
                 <div class="container-fluid justify-content-center">
                   <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
-                  <a href="/dash"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
+                  <a href="/api/dash"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
+                 
                   {{#if loggedIn}}
                   <button id="logout" class="navbar-brand mb-0 h1 text-white custom-nav">Logout</button>
                   {{else}}
