--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,11 +5,11 @@
 {{#each blogs as |blog|}}
     <div class="card custom-card2">
         <div class="card-headers custom-header3">
-             <div class="title"><strong>{{blog.title}}</strong></div>
-             <div><button class="deleteBtn" id="{{blog.id}}">Delete</button></div>
+             <div class="title"><strong>{{title}}</strong></div>
+             <div><button class="deleteBtn" id="{{id}}">Delete</button></div>
          </div>
          <div class="card-body custom-body3">
-             <div class="info">{{blog.text}}</div>
+             <div class="info">{{text}}</div>
          </div>
          </div>
 {{/each}}
