--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,23 @@
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Adventurer's Blog</title>
+    <title>TECH Blog</title>
   </head>
 
 
   <body>     
           <div class="pt-4 mb-4 custom-jumbo rounded-3">
             <div class="container-fluid py-5">
-              <h1 class="display-5 fw-bold text-white text-center header-text">ADVENTURER'S BLOG</h1>
+              <h1 class="display-5 fw-bold text-white text-center header-text">TECH BLOG</h1>
             </div>
             <nav class="navbar navbar-light custom-nav">
                 <div class="container-fluid justify-content-center">
-                  <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
+                  
+                  {{#if loggedIn}}
+                  <a href="/home"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home!</span></a>
+                  {{else}}
+                   <a href="/"><span class="navbar-brand mb-0 h1 text-white custom-nav">Home</span></a>
+                   {{/if}}
                   <a href="/api/dash"><span class="navbar-brand mb-0 h1 text-white custom-nav">Dashboard</span></a>
                  
                   {{#if loggedIn}}
