--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,10 @@
     <div class="card custom-card2">
         <div class="card-headers custom-header3">
              <div class="title"><strong>{{title}}</strong></div>
-             <div><button class="deleteBtn" id="{{id}}">Delete</button></div>
+             <div>
+                 <button class="deleteBtn" id="{{id}}">Delete</button>
+                 <button class="editBtn" id="{{id}}">Edit</button>
+             </div>
          </div>
          <div class="card-body custom-body3">
              <div class="info">{{text}}</div>
