--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -11,7 +11,7 @@
     {{#each entry.comments as |comment| }}
     <div class="card-headers custom-header2">
         <div class="title2"><strong>Comment</strong></div>
-        <div class="posted">Posted by: {{comment.user_name}} on {{format_date comment.date_created}}</div>
+        <div class="posted">Posted by: {{entry.user.user_name}} on {{format_date comment.date_created}}</div>
     </div>
         <div class="card-body custom-body2">
         <div class="info2">{{comment.comment_text}}</div>
