--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-8">
 <h3 class="personal-blog-entries">My Blog Entries</h3>
+{{#if blogs}}
 {{#each blogs as |blog|}}
     <div class="card custom-card2">
         <div class="card-headers custom-header3">
@@ -16,6 +17,10 @@
          </div>
          </div>
 {{/each}}
+{{else}}
+<br>
+<h4 class="text-center ">You have not created a blog post yet!</h4>
+{{/if}}
 
         </div>
             <div class="col-4">
